# tcl-anonymous-submission

./: .gitignore  README.md  pyproject.toml
agents/: sac_fixed.py  sac_hprs.py  sac_lagrangian.py  sac_lagrangian_multi.py  sac_pid_lagrangian.py  sac_tcl.py  sac_tcl_standalone.py
agents/common/: __init__.py  args.py  buffer.py  networks.py  sac_core.py  utils.py
docs/: adcraft_laplacian_rationale.md
experiments/: ROADMAP.md  VM_RUNBOOK.md  progress.py  run_all_flat.py  run_all_vm.sh  wilcoxon_stats.py
experiments/beta_schedule/: README.md  analyze.py  config.smoke.yaml  config.yaml  run.py
experiments/beta_star_scan/: config.smoke.yaml  config.yaml  run.py
experiments/constrained_pendulum_bench/: config.yaml  run.py
experiments/k_scaling_validation/: run.py
experiments/pid_lagrangian_bench/: config.yaml  run.py
experiments/pilot_adcraft/: README.md  analyze.py  analyze_phase5_a1.py  analyze_phase5_a1_bids.py  analyze_phase5_a1_standalone.py  analyze_phase5_c1.py  analyze_phase5_kappa.py  analyze_reward_shift.py  audit_economics.py  calibrate.py  calibrate_hetero.py  calibrate_laplacian.py  config.calibrated.yaml  config.calibrated_smoke.yaml  config.diagnostic.yaml  config.laplacian.yaml  config.phase5_a1.yaml  config.phase5_a1_standalone.yaml  config.phase5_a1_standalone_ll.yaml  config.phase5_a1_standalone_ll_smoke.yaml  config.phase5_a1_standalone_ll_w001.yaml  config.phase5_a1_v2.yaml  run.py  (+11 more)
tcl/: __init__.py
tests/: test_adcraft_laplacian.py  test_adcraft_multiconstraint.py  test_agents.py  test_sinusoidal_cmdp.py  test_standalone_reward.py
(+30 files in other folders)
