[project]
name = "tcl"
version = "0.1.0"
description = "Threshold-Cascaded Lexicographic rewards — reference implementation and experiments"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anonymous Author 1" },
    { name = "Anonymous Author 2" },
]
license = { text = "MIT" }
dependencies = [
    "torch>=2.5",
    "numpy>=2.0",
    "gymnasium>=1.0",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "tyro>=0.9",
    "tqdm>=4.66",
    "tensorboard>=2.18",
    "pandas>=2.2",
    "scipy>=1.14",
    "adcraft",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
]
wandb = ["wandb>=0.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
# Greek letters in plot labels / docstrings are intentional (paper math).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv.sources]
adcraft = { git = "https://github.com/Mikata-Project/adcraft.git", rev = "ac038a1" }
